# mcp-reddit

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-vps.yml
deploy/: nginx-mcp.conf
docs/: MISSING_FEATURES.md
docs/reference/: user-profile-enhancements.md
src/mcp_reddit/: __init__.py  analytics.py  http_server.py  key_service.py  reddit_fetcher.py
tests/: test_helpers.py  test_key_service.py  test_user_profile.py
