[project]
name = "mcp-reddit-server"
version = "1.0.0"
description = "Reddit MCP Server - Fetch Reddit posts and comments via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.7.0",
    "praw>=7.8.1",
    "redditwarp>=1.3.0",
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]


[project.scripts]
mcp-reddit = "mcp_reddit.reddit_fetcher:mcp.run"
mcp-reddit-http = "mcp_reddit.http_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reddit"] 
